[package]
name = "github_webhook_server"
version = "0.1.0"
authors = ["Michael Anderson <drmikeando@gmail.com>"]
edition = "2018"

[dependencies]
tide = "0.16"
async-std = { version = "1.6", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
async-trait = "0.1"
chrono="0.4"
